<resources>
    <string name="app_name">Prestamos</string>
    <string name="ingresos">Ingresos</string>
    <string name="ocupaci_n">Ocupación</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombres">Nombres</string>
    <string name="nuevo">Nuevo</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="id">ID</string>
    <string name="search_by_id">search by id</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prestamosapp">PrestamosApp</string>
    <string name="home">Home</string>
    <string name="personas">Personas</string>
    <string name="registros">Registros</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>