<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:startIconContentDescription="Persona"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/namesInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombres"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:startIconContentDescription="Persona"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surnamesInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellidos"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:startIconContentDescription="Occupation"
        app:startIconDrawable="@drawable/ic_baseline_work_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/occupationInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ocupaci_n"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:startIconContentDescription="Income"
        app:startIconDrawable="@drawable/ic_baseline_attach_money_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/incomeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresos"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:text="@string/agregar" />

</LinearLayout>